# protoc-gen-prost-serde

./: Cargo.toml
src/: generator.rs  lib.rs  main.rs
