[package]
name = "protoc-gen-prost-serde"
version = "0.1.0"
authors = ["Marcus Griep <marcus@griep.us>"]
description = "Coming soon…"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.10.0"
pbjson-build = "0.2.3"
prost-build = { version = "0.9.0", default-features = false }
prost-types = { version = "0.9.0", default-features = false }
prost = { version = "0.9.0", default-features = false, features = ["std"] }
protoc-gen-prost = "0.1.1"
regex = { version = "1.5.5", default-features = false }

[patch.crates-io]
pbjson-build = { git = "https://github.com/neoeinstein/pbjson", branch = "protoc-plugin-compat" }
prost-build = { git = "https://github.com/tokio-rs/prost", branch = "master" }
prost-types = { git = "https://github.com/tokio-rs/prost", branch = "master" }
prost = { git = "https://github.com/tokio-rs/prost", branch = "master" }
protoc-gen-prost = { git = "https://github.com/neoeinstein/protoc-gen-prost", branch = "main" }
